# ChangeLog for dev-ruby/mysql-ruby
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/mysql-ruby/ChangeLog,v 1.6 2004/06/25 01:54:18 agriffis Exp $

  10 Apr 2004; Mamoru KOMACHI <usata@gentoo.org> mysql-ruby-2.4.4a.ebuild,
  mysql-ruby-2.4.5.ebuild:
  virtual/ruby fix

*mysql-ruby-2.4.5 (10 Aug 2003)

  10 Aug 2003; Tom Payne <twp@gentoo.org> mysql-ruby-2.4.5.ebuild :
  Version bump.

*mysql-ruby-2.4.4a (07 Apr 2003)

  23 May 2003; Tom Payne <twp@gentoo.org> mysql-ruby-2.4.4a.ebuild :
  Added IUSE.

  13 May 2003; Tom Payne <twp@gentoo.org> mysql-ruby-2.4.4a.ebuild :
  Mark stable on all ARCHes.

  07 Apr 2003; Tom Payne <twp@gentoo.org> mysql-ruby-2.4.4a.ebuild :
  Initial import.