@@ -1,6 +1,6 @@
-MD5 e8ad8b42192cdba2ffb75bf79762595e mysql-ruby-2.4.4a.ebuild 612
-MD5 7c4ad948223e3ac00b6d27449f1942d1 mysql-ruby-2.4.5.ebuild 611
-MD5 3194d4db64f9a26a433756367ee7dd18 ChangeLog 757
+MD5 354a3c25604c66a409790f3c83b6bb53 mysql-ruby-2.4.4a.ebuild 610
+MD5 c628ad6b1248da421d57f560dd2148ed mysql-ruby-2.4.5.ebuild 609
+MD5 53415d8f7979097593d2a2fe0223be96 ChangeLog 913
 MD5 3eec9f3fe48b51f49dbc1f171a3b026f metadata.xml 157
 MD5 bb72d71fe8cbb210a7b58e6278555940 files/digest-mysql-ruby-2.4.4a 68
 MD5 1555f15ad051802c7c329642b88a3e84 files/digest-mysql-ruby-2.4.5 67
